# issue-states

./: Cargo.toml  LICENSE  README.md
spec/: Conditions.md  IssueStates.md  README.md  Semantics.md  Structure.md
src/: condition.rs  error.rs  iter.rs  lib.rs  resolution.rs  state.rs  test.rs  yaml.rs
